# test

./: .dockerignore  .env.example  .gitignore  00-CASE-FILE.md  404.html  ANNOUNCEMENT.md  APP-STORE-LISTING.md  BACK-COVER-COPY.md  BLURB-REQUESTS.md  BOOK2-NOTES.md  BOOK_MARKETING_PLAN.md  BOOK_SALES_THESIS.md  BRAND_STRATEGY.md  CARDINALS_STRATEGY.md  CARDINALS_THESIS_PLAN.md  CHANGELOG.md  CLAUDE.md  DOCX-COMPARISON.md  EPIGRAPH-PERMISSIONS.md  FINANCIAL-PLAN.md  GRACE-DESIGN-BRIEF.md  INTERVIEW-QUESTIONS.md  ISBN-ASSIGNMENTS.md  JOURNAL-TRANSCRIPTS.md  KDP-COVER-SPECS.md  KDP-PROOF-ORDER.md  LAUNCH.md  LAUNCH_DAY_CHECKLIST.md  LEGAL-REVIEW.md  LIFE-STEPS.md  MY_BOOK_ROADMAP.md  Makefile  OUTREACH-FERRERA.md  PITCH-ONE-PAGER.md  PROMPT-EVALS.md  PUBLISHING-CHANNELS.md  README.md  SCOTT-HOMEWORK.md  SCOTT-PROOFREAD-CHECKLIST.md  SEPOLIA_DRY_RUN.md  (+86 more)
CardinalPress/: CardinalPressApp.swift
CardinalPress.xcodeproj/: project.pbxproj
MBA-study/: MBA_700_701_Compiled_Questions.docx  MBA_700_701_Compiled_Questions.md  MBA_700_701_Flashcards.csv  MBA_700_701_Flashcards_Anki.txt
accounting/: README.md  package.json
analysis/: qbo_ttm_operating.csv  qbo_ttm_with_other_income.csv
assets/: brand-guide.html  cardinals-toolbox.html  first-72-hours-worksheet.html  token-metadata.json
benefits/: README.md  package-lock.json  package.json
blue-ridge-mailer/: blue-ridge-mailer.php  readme.txt  uninstall.php
book/: CANVA_ART_PICKS.md  ME_AND_DAD_manuscript.md  ME_AND_DAD_mockup.html  README.md  THE_LITTLE_CARDINALS_PROMISE.md  THE_LITTLE_LANTERN_FOX.md  THE_PROMISE_manuscript.md  THE_PROMISE_mockup.html  demo.html  mockup-template-dad.html  mockup-template.html  package-lock.json  package.json
booking/: README.md  package-lock.json  package.json
books/: promise.html  toolkit.html
campaign/: 01-master-strategy.md  02-toolkit-launch.md  03-memoir-launch.md  04-childrens-book-launch.md  05-content-calendar.md  06-email-marketing-kit.md  07-social-pr-partnerships.md  08-assets-and-metrics.md  a-plus-toolkit.md  jaye-affiliate-deal.md  jaye-letter-agreement-draft.md  kdp-toolkit-listing.md  memoir-facts.md
cardinal-hr/: features.html  index.html  pricing.html  security.html
cardinals-promise/: README.md
childrens-book/: THE-REDDEST-BIRD.md
contracts/: CardToken.sol  CardToken.t.sol  CardTokenInvariants.t.sol  CardinalsPromise.sol  CardinalsPromise.t.sol  CardinalsPromiseInvariants.t.sol
dating/: app.js  (+15 more)
kit-mcp/: .env.example  .gitignore  README.md  pyproject.toml
kit-mcp/src/kit_mcp/: __init__.py  client.py  config.py  server.py
kit-mcp/tests/: test_client.py  test_config.py  test_server.py
(+605 files in other folders)
