[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "finalyst"
version = "0.1.0"
description = "A command-line financial analysis toolkit (statement ratios + return/risk metrics)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["finance", "ratios", "cli", "returns", "analysis"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
finalyst = "finalyst.cli:main"

[tool.setuptools.packages.find]
include = ["finalyst*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
