[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostwriter"
version = "0.1.0"
description = "An AI ghost writer CLI powered by Claude — draft, rewrite, expand, and continue prose."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ghostwriter" }]
keywords = ["writing", "ai", "claude", "anthropic", "ghostwriter", "cli"]
dependencies = [
    "anthropic>=0.49",
]

[project.scripts]
ghostwriter = "ghostwriter.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
